tests/rosetta/out/Rust/constrained-random-points-on-a-circle-2.error
rustc: exit status 1
error: cast cannot be followed by a method call
  --> /tmp/constrained-random-points-on-a-circle-2.rs:22:55
   |
22 |     println!("{}", vec![format!("{}", format!("{}{}", poss.len() as i32.to_string(), " possible points"))].into_iter().filter(|s| !s.is_e...
   |                                                       ^^^^^^^^^^^^^^^^^
   |
help: try surrounding the expression in parentheses
   |
22 |     println!("{}", vec![format!("{}", format!("{}{}", (poss.len() as i32).to_string(), " possible points"))].into_iter().filter(|s| !s.is_empty()).collect::<Vec<_>>().join(" ") );
   |                                                       +                 +

error[E0308]: mismatched types
  --> /tmp/constrained-random-points-on-a-circle-2.rs:36:116
   |
36 |     let mut seen: std::collections::HashMap<&'static str, bool> = { let mut m = std::collections::BTreeMap::new(); m };
   |                                                                                                                    ^ expected `HashMap<&str, bool>`, found `BTreeMap<_, _>`
   |
   = note: expected struct `HashMap<&'static str, bool>`
              found struct `BTreeMap<_, _>`

error[E0425]: cannot find function `now` in this scope
  --> /tmp/constrained-random-points-on-a-circle-2.rs:39:21
   |
39 |         let mut i = now() % poss.len() as i32;
   |                     ^^^ not found in this scope

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0425.
For more information about an error, try `rustc --explain E0308`.
